[gd_scene load_steps=14 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/maze1placeholder.png" type="Texture" id=2]
[ext_resource path="res://Goal.gd" type="Script" id=3]
[ext_resource path="res://Key.gd" type="Script" id=4]
[ext_resource path="res://VariableTracker.gd" type="Script" id=5]
[ext_resource path="res://Door.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70.75, 10 )

[sub_resource type="QuadMesh" id=2]

[sub_resource type="QuadMesh" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 51.8635, 3.28447 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 62.3744, 9.87779 )

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="SphereMesh" id=7]

[node name="Node2D" type="Node2D"]

[node name="maze" type="StaticBody2D" parent="."]
position = Vector2( -11, -19 )

[node name="Maze1Placeholder" type="Sprite" parent="maze"]
position = Vector2( 572, 702 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="maze"]
build_mode = 1
polygon = PoolVector2Array( 41, 33, 40, 584, 989, 615, 1001, 20, 985, 607, 452, 591, 478, 460, 734, 468, 551, 459, 576, 414, 782, 419, 780, 471, 844, 448, 792, 196, 759, 354, 792, 208, 841, 447, 784, 464, 785, 413, 577, 409, 548, 456, 474, 455, 447, 591, 47, 579 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="maze"]
build_mode = 1
polygon = PoolVector2Array( 40, 32, 1001, 24, 856, 29, 917, 522, 539, 533, 916, 521, 851, 29, 328, 33, 325, 132, 756, 130, 709, 205, 446, 181, 434, 291, 636, 296, 425, 295, 439, 174, 704, 200, 751, 135, 326, 138, 325, 366, 589, 360, 220, 376, 225, 505, 370, 425, 221, 513, 214, 440, 116, 461, 214, 433, 212, 374, 152, 375, 319, 367, 321, 33, 155, 36, 155, 221, 147, 37 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 82, 63 )

[node name="Goal" type="Area2D" parent="."]
script = ExtResource( 3 )
nextScene = "res://level3.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 916.75, 21 )
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Goal"]
position = Vector2( 916, 21 )
scale = Vector2( 143.75, 18.75 )
mesh = SubResource( 2 )

[node name="Door" type="RigidBody2D" parent="."]
mode = 1
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 6 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Door"]
position = Vector2( 410, 433 )
rotation = 0.436332
scale = Vector2( 124.388, 7.70239 )
mesh = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 409.396, 432.078 )
rotation = 0.436332
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Area2D"]
position = Vector2( 408.757, 432.521 )
rotation = 0.436332
shape = SubResource( 8 )

[node name="Key" type="RigidBody2D" parent="."]
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key"]
position = Vector2( 223, 81 )
shape = SubResource( 6 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Key"]
position = Vector2( 223, 80.9744 )
scale = Vector2( 10.0113, 9.74388 )
mesh = SubResource( 7 )

[node name="VariableTracker" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="KeyTracker" type="Label" parent="VariableTracker"]
margin_left = 154.0
margin_top = 26.0
margin_right = 230.0
margin_bottom = 114.0
text = "Keys: 0"

[connection signal="body_entered" from="Goal" to="Goal" method="_on_Goal_body_entered"]
[connection signal="key_used" from="Door" to="VariableTracker" method="_on_Door_key_used"]
[connection signal="body_entered" from="Door/Area2D" to="Door" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Key" to="Key" method="_on_Key1_body_entered"]
[connection signal="key_obtained" from="Key" to="VariableTracker" method="_on_Key_key_obtained"]
